--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,5 +4,22 @@
 @tailwind utilities;
 
 .main-container {
-    @apply container max-w-6xl mx-auto;
+  @apply container max-w-6xl mx-auto;
+}
+
+.lib-table {
+  @apply table w-full border-slate-300;
+}
+
+.lib-table tr {
+  @apply table-row border-b last:border-none hover:bg-slate-100 text-base;
+}
+
+.lib-table td,
+.lib-table th {
+  @apply table-cell border-r last:border-none py-3 px-6;
+}
+
+.lib-table th {
+    @apply font-normal text-slate-500
 }
