--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,9 +17,9 @@
 
 .lib-table td,
 .lib-table th {
-  @apply table-cell border-r last:border-none py-3 px-6;
+  @apply table-cell border-r last:border-none py-2 px-4;
 }
 
 .lib-table th {
-    @apply font-normal text-slate-500
+  @apply font-normal text-slate-500;
 }
